# sketchy-compiler

./: CMakeLists.txt  LICENCE  LICENSE  Makefile  README.md  error.c  error.h  fe.c  lexer.c  lexer.h
backend/: CMakeLists.txt  bc.h  bc_reader.c  bc_reader.h  regalloc.c  regalloc.h  util.c
backend/win64/: codegen_win64.c  codegen_win64.h  emitter.c  emitter.h  main.c
tests/: test_lexer.c  win_x86_backend_test.c
